--- a/LuaToolDotNet/Properties/Resources.resx
+++ b/LuaToolDotNet/Properties/Resources.resx
@@ -117,35 +117,39 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="lua_file_format_symbol" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\lua-file-format-symbol.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="start_button" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAWwSURBVHhe7ZvbbxtFFIctAQLeuPwLBSoh1HgdEIEUUlEeQEgkbYOERFohLhXwwhNvIIQKL4gX
-        VCr6FKDd3WIoArUUEPYuaYqTxkmbhN5LGtyCoCKymwTS+Dqcsz2WY+c4We/O2ruoP+mTInvmzJyT3Zkz
-        F4euy2M9EPv0TiWu9yhx9W0lrumKoY4phnYRSAMlAv+Gz+A7LGOV1XuwLpkJliKmtlYx9HcjhnYcHCsC
-        wiFFCMgxYEe7seceMu9PRUZ33wSObwsb2lHGEVkMhw11a5dp3kjNtl6W43H1FejcdE1nPSNi6BcUU9ve
-        8kAoMX09PJ6TXCebxAQ8dZ3UneapIxG9FRr/GMABjOtYMymFDX1Xl9l/C3XPW+FgBI2O13TCD5xcZ2j3
-        Uje9EUT6MWhorqZhPzEbiakbqLtyBe9aNzRwtaZBP5IFnqFuyxGM8r1gtLCkEb9TgOl4M3XfnfCRAoOL
-        NQ0EgWx7THuc3HAmeOwho/P1O78aV9oG1LvIncaE0wqlspzh4AB5Ck7b5JZ9QWWc53mjgUPdSW7ZE2ZX
-        UNEPSY4sSm1x/SFyb2Vhfg0VpCQ6Gwb3i+3H46Jz4Av2+6YCrwKuW8jN+qKFDW+kAbqHDohMblGgZvNZ
-        8d7ZpGg3dbZs81BfJjd5YYSgoJRV3UdTE5bzS3VidkY8O/IdW75JTK24goR3fxtTyRGfpE6R29Uqlkpi
-        /x/nxfrDrXktwnG9j9xdLsVUR7hKTqgXgLL+zi6It04NsXU9xdQS5G611sX23c1WcMhqASgrmf5LbBo+
-        yNrwCnZ7DffwuMJOsRsAVK5YFP2pk+LBnz5nbckGVrXvkNsVwRdS1/iNBKCsiwtz4rVxk7UnmSS5fU3W
-        1rW73dtlOAlAWYdnfhdP/Pw1a1cShfsG1dvJffzvq5uYQq5wEwDUfD4n3j835lnuADNeN7kPAcCDCKaQ
-        G9wGoKwz82mxdfQHtg03RAz1TXIfA4AnNnxBp8gKAApzh4N/TouuwS/Zthyyl9y3XgE8ruIKOUZmAMqa
-        yV61cgdYprNtNkhlIASDl5gCrvAiAGWNZi6Lza5zBzVF7ltT4JXlBdzhZQBQ2WLBWmBxbdskTe5bAcjX
-        fOkarwOAKgFPJhxPl3lyP7gBQPUMH2Dbt0FVAAL3CqA+S51m27ZJ5RUI2iCYgpT51XGDbdc+VYNgMKbB
-        RRj4dk//AoumfWybDVKZBv2eCKFwffBU4hu2LYcsSYR8nApfXlwQb5w4wrbhhppUWO/hCrnBbQDypaLQ
-        L50VnQNR1r5b2gz1aXI/FOr4PnoHfOib5TBmer1Hv2XtSqJ6OYySfQzmJACSc/36mOoIuV0RDIQ72MIO
-        aSQA5Z3iR5q1UwxjHrldUas2RU/PpUWfB+v9lUBfye1qybzjt1oA8LTIyx2futTbFkfhJUS2kgPqBQAX
-        MLi5sfHIV2w9zzG158jd5bIuPeIlRK5ig+y6MHnN4yU6N58Rz4/9yJZvEisfjaHwBiZTsWG2wDT2Tz5n
-        Of5vISc+OD8m7m/x4WjE1F4kN+tL5vE4bm2/PjlgHZNz3zeVuDZp+2ptu7H3Yaj0f7ogUQzHtA5yz57w
-        +iljKJBAYvUhuWVfeEkKHptjnMGAMeHokhSKkqPZGoNBIqOYe9aQO84EiUoXGArCFdlasmFT3UhuuFPY
-        1LeAwUBdlcXzTuq+HOFhIhgOwpOA13rlXpYui14H6TvIEsnAeuZR6q43wru3svcOpIAzltsBz66sKdJQ
-        d0LDfkiWijjPrzl06GbqXvMEQYjIvFnmgHHbV2C9krV2iOsvQWemajrnJb/CFPdCbzR6A3Wj9cJAhON6
-        n2LoQ0yH5WBqCVzP217UtEqYQeJVNOh0EnCTP2DdJO7hOf7hQ6uF28+4B48HEWFDVcGhUeA3AH8wjVvx
-        CP6NnyWxDJbFOm1m/21k5rq8USj0H+a+mMl1fX3nAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAABGdBTUEAALGPC/xhBQAABbBJREFUeF7t
+        m9tvG0UUhy0BAt64/AsFKiHUeB0QgRRSUR5ASCRtg4REWiEuFfDCE28ghAoviBdUKvoUoN3dYigCtRQQ
+        9i5pipPGSZuE3ksa3IKgIrKbBNL4OpyzPZZj5zhZ787au6g/6ZMie+bMnJPdmTMXh67LYz0Q+/ROJa73
+        KHH1bSWu6YqhjimGdhFIAyUC/4bP4DssY5XVe7AumQmWIqa2VjH0dyOGdhwcKwLCIUUIyDFgR7ux5x4y
+        709FRnffBI5vCxvaUcYRWQyHDXVrl2neSM22XpbjcfUV6Nx0TWc9I2LoFxRT297yQCgxfT08npNcJ5vE
+        BDx1ndSd5qkjEb0VGv8YwAGM61gzKYUNfVeX2X8Ldc9b4WAEjY7XdMIPnFxnaPdSN70RRPoxaGiupmE/
+        MRuJqRuou3IF71o3NHC1pkE/kgWeoW7LEYzyvWC0sKQRv1OA6Xgzdd+d8JECg4s1DQSBbHtMe5zccCZ4
+        7CGj8/U7vxpX2gbUu8idxoTTCqWynOHgAHkKTtvkln1BZZzneaOBQ91JbtkTZldQ0Q9JjixKbXH9IXJv
+        ZWF+DRWkJDobBveL7cfjonPgC/b7pgKvAq5byM36ooUNb6QBuocOiExuUaBm81nx3tmkaDd1tmzzUF8m
+        N3lhhKCglFXdR1MTlvNLdWJ2Rjw78h1bvklMrbiChHd/G1PJEZ+kTpHb1SqWSmL/H+fF+sOteS3Ccb2P
+        3F0uxVRHuEpOqBeAsv7OLoi3Tg2xdT3F1BLkbrXWxfbdzVZwyGoBKCuZ/ktsGj7I2vAKdnsN9/C4wk6x
+        GwBUrlgU/amT4sGfPmdtyQZWte+Q2xXBF1LX+I0EoKyLC3PitXGTtSeZJLl9TdbWtbvd22U4CUBZh2d+
+        F0/8/DVrVxKF+wbV28l9/O+rm5hCrnATANR8PifePzfmWe4AM143uQ8BwIMIppAb3AagrDPzabF19Ae2
+        DTdEDPVNch8DgCc2fEGnyAoACnOHg39Oi67BL9m2HLKX3LdeATyu4go5RmYAyprJXrVyB1ims202SGUg
+        BIOXmAKu8CIAZY1mLovNrnMHNUXuW1PgleUF3OFlAFDZYsFaYHFt2yRN7lsByNd86RqvA4AqAU8mHE+X
+        eXI/uAFA9QwfYNu3QVUAAvcKoD5LnWbbtknlFQjaIJiClPnVcYNt1z5Vg2AwpsFFGPh2T/8Ci6Z9bJsN
+        UpkG/Z4IoXB98FTiG7YthyxJhHycCl9eXBBvnDjCtuGGmlRY7+EKucFtAPKlotAvnRWdA1HWvlvaDPVp
+        cj8U6vg+egd86JvlMGZ6vUe/Ze1Kono5jJJ9DOYkAJJz/fqY6gi5XREMhDvYwg5pJADlneJHmrVTDGMe
+        uV1RqzZFT8+lRZ8H6/2VQF/J7WrJvOO3WgDwtMjLHZ+61NsWR+ElRLaSA+oFABcwuLmx8chXbD3PMbXn
+        yN3lsi494iVErmKD7Lowec3jJTo3nxHPj/3Ilm8SKx+NofAGJlOxYbbANPZPPmc5/m8hJz44Pybub/Hh
+        aMTUXiQ360vm8Thubb8+OWAdk3PfN5W4Nmn7am27sfdhqPR/uiBRDMe0DnLPnvD6KWMokEBi9SG5ZV94
+        SQoem2OcwYAx4eiSFIqSo9kag0Eio5h71pA7zgSJShcYCsIV2VqyYVPdSG64U9jUt4DBQF2VxfNO6r4c
+        4WEiGA7Ck4DXeuVeli6LXgfpO8gSycB65lHqrjfCu7ey9w6kgDOW2wHPrqwp0lB3QsN+SJaKOM+vOXTo
+        Zupe8wRBiMi8WeaAcdtXYL2StXaI6y9BZ6ZqOuclv8IU90JvNHoDdaP1wkCE43qfYuhDTIflYGoJXM/b
+        XtS0SphB4lU06HQScJM/YN0k7uE5/uFDq4Xbz7gHjwcRYUNVwaFR4DcAfzCNW/EI/o2fJbEMlsU6bWb/
+        bWTmurxRKPQf5r6YyXV9fecAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
